@@ -1,6 +1,6 @@
 jags.fit <-
 function(data, params, model, inits=NULL, n.chains=3, n.adapt=1000, n.update=0, thin=1, n.iter=5000, 
-updated.model=FALSE, ...)
+updated.model=TRUE, ...)
 {
     ## inital steps
     n.clones <- nclones.list(data)
