@@ -1,0 +1,5 @@
+updated.model <-
+function(object, ...)
+{
+    UseMethod("updated.model")
+}
