@@ -1,0 +1,5 @@
+updated.model.mcmc.list <- 
+function(object, ...) 
+{
+    attr(object, "updated.model")
+}
