@@ -8,6 +8,7 @@ Version 1.0-2, December 4, 2009
     * dc.pfit: models with different n.clones are run parallel
       with load balancing as default.
     * options got cluster (incl. load.balancing).
+    * updated.model attr in jags.fit output for further updating.
 
 Version 1.0-1, November 19, 2009
     * custommodel function added, fitting functions modified.
